<resources>
    <string name="about_activity_title">About the author</string>
    <string name="about_activity_name" translatable="false">Eugênio Alves Moreira Neto</string>
    <string name="about_activity_course">Software Engineering</string>
    <string name="about_activity_email" translatable="false">eugenio@alunos.utfpr.edu.br</string>
    <string name="about_activity_description">Application for managing computers to be repaired</string>
    <string name="about_activity_college_logo_content_description">UTFPR logo</string>
    <string name="about_activity_college_name">Federal Technological University of Parana</string>
    <string name="app_name" translatable="false">CompuFix</string>
    <string name="computer_adapter_urgent_prefix">Urgent? %1$s</string>
    <string name="computer_adapter_type_prefix">Type: %1$s</string>
    <string name="computer_adapter_customer_prefix">Customer: %1$s</string>
    <string name="computer_adapter_owner_prefix">Owner: %1$s</string>
    <string name="computer_adapter_urgent_yes">Yes</string>
    <string name="computer_adapter_urgent_no">No</string>
    <string name="edit_item_options_menu_item_save">Save</string>
    <string name="edit_item_options_menu_item_clear">Clear</string>
    <string name="computers_options_menu_item_add">Add</string>
    <string name="computers_options_menu_item_about">About</string>
    <string name="computers_options_menu_item_submenu_order_by">Order by</string>
    <string name="computers_options_menu_item_submenu_order_by_1">Owner</string>
    <string name="computers_options_menu_item_submenu_order_by_2">Type</string>
    <string name="list_selected_item_menu_item_update">Update</string>
    <string name="list_selected_item_menu_item_delete">Delete</string>
    <string name="computer_form_activity_title_create_computer">Register computer</string>
    <string name="computer_form_activity_title_update_computer">Update computer</string>
    <string name="register_activity_owner">Owner</string>
    <string name="register_activity_model">Model</string>
    <string name="register_activity_manufacturer">Manufacturer</string>
    <string name="register_activity_description">Description</string>
    <string name="register_activity_type">Type</string>
    <string name="register_activity_type_1">Format</string>
    <string name="register_activity_type_2">Maintain</string>
    <string name="register_activity_type_3">Repair</string>
    <string name="register_activity_customer">Customer</string>
    <string name="register_activity_customer_physical_person">Physical person</string>
    <string name="register_activity_customer_legal_person">Legal person</string>
    <string name="register_activity_customer_unregistered">Unregistered</string>
    <string name="register_activity_customer_not_specified">Customer not specified</string>
    <string name="register_activity_urgent">Urgent</string>
    <string name="register_activity_message_error_owner">Owner can not be empty</string>
    <string name="register_activity_message_error_model">Model can not be empty</string>
    <string name="register_activity_message_error_manufacturer">Manufacturer can not be empty</string>
    <string name="register_activity_message_error_description">Description can not be empty</string>
    <string name="register_activity_message_error_customer">Customer must be selected</string>
    <string name="computer_form_activity_message_error_owner">Owner can not be empty</string>
    <string name="computer_form_activity_message_error_model">Model can not be empty</string>
    <string name="computer_form_activity_message_error_manufacturer">Manufacturer can not be empty</string>
    <string name="computer_form_activity_message_error_description">Description can not be empty</string>
    <string name="computer_form_activity_message_error_customer">Customer must be selected</string>
    <string name="computer_form_activity_message_form_cleared">Form successfully cleared</string>
    <string name="types_options_menu_item_add">Add</string>
    <string name="type_activity_description">Description</string>
    <string name="type_activity_update_title">Update type</string>
    <string name="type_activity_create_title">Create type</string>
    <string name="alert_dialog_util_alert_dialog_error_title">Error</string>
    <string name="alert_dialog_util_alert_dialog_ok_button">Ok</string>
    <string name="alert_dialog_util_alert_dialog_confirmation_title">Confirmation</string>
    <string name="alert_dialog_util_alert_dialog_yes_button">Yes</string>
    <string name="alert_dialog_util_alert_dialog_no_button">No</string>
    <string name="type_form_activity_message_description_empty">Description can not be empty</string>
    <string name="type_form_activity_message_description_already_registered">Description already registered</string>
    <string name="type_form_activity_message_form_cleared">Form successfully cleared</string>
    <string name="types_activity_title">Types</string>
    <string name="computers_options_menu_item_types">Types</string>
    <string name="type_form_activity_title_create_type">Register type</string>
    <string name="type_form_activity_title_update">Update type</string>
    <string name="computers_activity_message_error_no_type_registered">There is no type registered</string>
    <string name="computers_activity_message_confirmation_deletion">Are you sure you want to delete %1$s?</string>
    <string name="types_activity_message_error_type_in_use">This type is in use. Can not be deleted</string>
    <string name="types_activity_message_confirmation_deletion">Are you sure you want to delete %1$s?</string>
    <string name="activity_computer_form_completion_forecast">Completion forecast</string>
    <string name="computer_form_activity_message_error_completion_forecast">Completion forecast can not be empty</string>
</resources>
