<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComputerFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_owner"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextOwner"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOwner" />

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_model"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextOwner" />

            <EditText
                android:id="@+id/editTextModel"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapSentences"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewModel" />

            <TextView
                android:id="@+id/textViewManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_manufacturer"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextModel" />

            <EditText
                android:id="@+id/editTextManufacturer"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapSentences"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewManufacturer" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_description"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextManufacturer" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapSentences"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_type"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textViewCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity_customer"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerType" />

            <RadioGroup
                android:id="@+id/radioGroupCustomer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioButtonPhysicalPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_customer_physical_person" />

                <RadioButton
                    android:id="@+id/radioButtonLegalPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_customer_legal_person" />

                <RadioButton
                    android:id="@+id/radioButtonNotRegistered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_customer_unregistered" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBoxUrgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_activity_urgent" />

            <TextView
                android:id="@+id/textViewCompletionForecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/activity_computer_form_completion_forecast"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxUrgent" />

            <EditText
                android:id="@+id/editTextCompletionForecast"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapSentences"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCompletionForecast" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
